add and modified index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <H1>Odins Recipes</H1>
-    <ul><li><a href="lasagna.html"><b>Enchilada lasagne</b></a></li></ul>
+    <ul><li><a href="recipes/lasagna.html"><b>Enchilada lasagne</b></a></li></ul>
     
 </body>
 </html>
