--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <H1>Odins Recipes</H1>
-    <ul><li><a href="recipes/lasagna.html"><b>Enchilada lasagne</b></a></li></ul>
-    <li><a href="reciepes/Banh_Mi_Sliders.html"><b>Bahn mi sliders</b></li>
+    <ul>
+    <li><a href="recipes/lasagna.html"><b>Enchilada lasagne</b></a></li></ul>
+    <li><a href="recipes/Banh_Mi_Sliders.html"><b>Bahn mi sliders</b></li>
 </body>
 </html>
