--- a/recipes/Banh_Mi_Sliders.html
+++ b/recipes/Banh_Mi_Sliders.html
@@ -1,2 +1,8 @@
 <h1>Banh Mi Sliders</h1>
-<img src=""
+<img src="banhme.webp">
+<ul>
+<li>Ground beef</li>
+<li>cup rolled oats</li>
+<li>slice bread</li>
+<li>Everything you want</li>
+</ul>
